--- a/projects.html
+++ b/projects.html
@@ -13,12 +13,11 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="index.html">Stovin Logo</a></li>
+          <li><a href="index.html">Steven Nguyen</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
@@ -32,7 +31,7 @@
       </div>
     </div>-->
     
-    <div class="neighborhood-guides">
+    <div class="highlighted-projects">
         <div class="container">
             <h2>Web Development</h2>
             <div class="row">
@@ -106,20 +105,18 @@
         </div>
     </div>
     
-    <div class="learn-more">
-    <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-      <h3>Follow Me!</h3>
-      <ul>
-      <li>Facebook</li>
-      <li>Github</li>
-      <li>LinkedIn</li>
-      <li>Blog</li>
-      </ul>
+    <footer class="footer">
+        <div class="learn-more">
+          <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                  <p>
+                    <a href="#">Resume</a> | <a href="#">Github</a> | <a href="#">LinkedIn</a>
+                  </p>
+                </div>
+              </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
+    </footer> 
   </body>
 </html>
