finished initial release versino of website

--- a/projects.html
+++ b/projects.html
@@ -21,15 +21,11 @@
           <li><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
-    </div>
-
-    <!--<div class="jumbotron">
       <div class="container">
-        <h1>Find a place to stay.</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p>
-        <a href="#">Learn More</a>
+        <h1 class="text-center">Projects</h1>
+        <p class="text-center">Cool stuff I'm working on</p>
       </div>
-    </div>-->
+    </div>
     
     <div class="highlighted-projects">
         <div class="container">
@@ -37,68 +33,26 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/stovin.github.io.jpeg" >
+                        <h3>stovin.github.io</h3>
+                        <p><a href="https://github.com/stovin/stovin.github.io">Source</a></p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/gainztracker.jpeg" >
+                        <h3>GainzTracker</h3>
+                        <p><a href="https://github.com/stovin/gainztracker">Source</a></p>
                     </div>
                 </div>
             </div>
-            <h2>Systems</h2>
+            <h2>Mobile</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-            </div>
-            <h2>Software Design</h2>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/moop.jpg" >
+                        <h3>Moop</h3>
+                        <p>In design phase...</p>
                     </div>
                 </div>
             </div>
@@ -106,17 +60,59 @@
     </div>
     
     <footer class="footer">
-        <div class="learn-more">
+        <div id="top-footer"class="learn-more">
           <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                  <p>
-                    <a href="#">Resume</a> | <a href="#">Github</a> | <a href="#">LinkedIn</a>
-                  </p>
+                <div class="text-center col-md-12">
                 </div>
               </div>
           </div>
         </div>
-    </footer> 
+        <div id="bottom-footer"class="learn-more">
+          <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="images/steven2resized.jpg" width="78" height="78">
+                    <br><br>
+                    <p class="bio-info">Full time Informatics student at University of California, Irvine. Combines education, work experience, and personal drive to create useful and functional applications.
+                    <br>Graduating March 2017.</p>
+                    <p><a href="contact.html">Contact Me</a></p>
+                </div>
+                <div class="col-md-4">
+                  <ul class="list-unstyled">
+                    <li>
+                        <h3><a href="ResumeLateApr2016.pdf">Resume</a></h3>
+                      <p>Updated April 2016</p>    
+                    </li>
+                    <li>
+                        <h3><a href="http://github.com/stovin">Github</a></h3>
+                      <p>Source code for all my projects</p>    
+                    </li>
+                    <li>
+                        <h3><a href="https://www.linkedin.com/in/stevennnguyen">LinkedIn</a></h3>
+                      <p>Connect with me</p>    
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-md-4">
+                  <ul class="list-unstyled">
+                    <li>
+                        <h3><a href="index.html">Home</a></h3>
+                      <p>Little description of myself and my current projects</p>
+                    </li>
+                    <li>
+                        <h3><a href="projects.html">Projects</a></h3>
+                      <p>All projects I have done or am currently working on</p>
+                    </li>
+                    <li>
+                        <h3><a href="contact.html">Contacts</a></h3>
+                      <p>How to contact me</p>
+                    </li>
+                  </ul>
+                </div>                
+              </div>
+          </div>
+        </div>
+    </footer>
   </body>
 </html>
