--- a/index.html
+++ b/index.html
@@ -17,22 +17,26 @@
           <li><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
+      <div class="container">
+        <h1 class="text-center">Steven Nguyen</h1>
+        <p class="text-center">Web Developer</p>
+      </div>
     </div>
 
     <div class="highlighted-projects">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <br><br>
+                    <br>
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/steven2resized.jpg" >
                     </div>
                 </div>
                 <div class="col-md-8">
                     <h3>About Me</h3>
-                    <p>My name is Steven Nguyen and I am a 4th year Informatics major expecting to graduate March 2017. I'm interested in exploring career opportunities in web development using both modern technologies and agile environments.</p>
-                    <p>Hobbies fun stuff.</p>
-                    <p><a href="#">See some of my projects!</a></p>
+                    <p>My name is Steven Nguyen and i was born and raised in Oxnard, California but currently doing school here in Irvine. I am a 4th year Informatics major expecting to graduate March 2017. I chose informatics for it's human centered design curriculum. What I've learned from the major is reflected in the work that I do. I love programming simple, functional apps that solve everyday problems. I am most experienced in front end development, but I don't hesitate to try new things like back end programming, mobile applications, UX design, software design, and project management.</p>
+                    <p>Into self improvement, consciousness, and all things that better your life. Reading, meditation, gym, hiking, Counter Strike: Global Offensive, music, cinematics, and cooking (dumplings) are just a few of the things I do when I'm not programming.</p>
+                    <p><a href="projects.html">See some of my projects!</a></p>
                 </div>
             </div>
         </div>
@@ -45,46 +49,89 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/stovin.github.io.jpeg" >
                     </div>
                     <h3>stovin.github.io</h3>
                     <p>Personal website used to display my qualifications and projects.</p>
-                    <p><a href="#">Learn more about this project!</a></p>
+                    <p><a href="https://github.com/stovin/stovin.github.io">Source</a></p>
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/gainztracker.jpeg" >
                     </div>
                     <h3>GainzTracker</h3>
                     <p>Keep track of your workouts and gainz.</p>
                     <br>
-                    <p><a href="#">Learn more about this project!</a></p>
+                    <p><a href="https://github.com/stovin/gainztracker">Source</a></p>
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="https://placehold.it/360x300" >
+                        <img src="images/moop.jpg" >
                     </div>
                     <h3>Moop</h3>
                     <p>iPhone app that will cheer you up anywhere, anytime.</p>
                     <br>
-                    <p><a href="#">Learn more about this project!</a></p>
+                    <p>In design phase...</p>
                 </div>
             </div>
         </div>
     </div>
     
     <footer class="footer">
-        <div class="learn-more">
+        <div id="top-footer"class="learn-more">
           <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                  <p>
-                    <a href="#">Resume</a> | <a href="#">Github</a> | <a href="#">LinkedIn</a>
-                  </p>
+                <div class="text-center col-md-12">
                 </div>
               </div>
           </div>
         </div>
-    </footer>      
+        <div id="bottom-footer"class="learn-more">
+          <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="images/steven2resized.jpg" width="78" height="78">
+                    <br><br>
+                    <p class="bio-info">Full time Informatics student at University of California, Irvine. Combines education, work experience, and personal drive to create useful and functional applications.
+                    <br>Graduating March 2017.</p>
+                    <p><a href="contact.html">Contact Me</a></p>
+                </div>
+                <div class="col-md-4">
+                  <ul class="list-unstyled">
+                    <li>
+                        <h3><a href="ResumeLateApr2016.pdf">Resume</a></h3>
+                      <p>Updated April 2016</p>    
+                    </li>
+                    <li>
+                        <h3><a href="http://github.com/stovin">Github</a></h3>
+                      <p>Source code for all my projects</p>    
+                    </li>
+                    <li>
+                        <h3><a href="https://www.linkedin.com/in/stevennnguyen">LinkedIn</a></h3>
+                      <p>Connect with me</p>    
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-md-4">
+                  <ul class="list-unstyled">
+                    <li>
+                        <h3><a href="index.html">Home</a></h3>
+                      <p>Little description of myself and my current projects</p>
+                    </li>
+                    <li>
+                        <h3><a href="projects.html">Projects</a></h3>
+                      <p>All projects I have done or am currently working on</p>
+                    </li>
+                    <li>
+                        <h3><a href="contact.html">Contacts</a></h3>
+                      <p>How to contact me</p>
+                    </li>
+                  </ul>
+                </div>                
+              </div>
+          </div>
+        </div>
+    </footer>
+
   </body>
 </html>
