stovin for stevennnguyen pt2

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="images/stovin.github.io.jpeg" >
+                        <img src="images/stevennnguyen.github.io.jpeg" >
                     </div>
-                    <h3>stovin.github.io</h3>
+                    <h3>stevennnguyen.github.io</h3>
                     <p>Personal website used to display my qualifications and projects.</p>
-                    <p><a href="https://github.com/stovin/stovin.github.io">Source</a></p>
+                    <p><a href="https://github.com/stevennnguyen/stevennnguyen.github.io">Source</a></p>
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
@@ -62,7 +62,7 @@
                     <h3>GainzTracker</h3>
                     <p>Keep track of your workouts and gainz.</p>
                     <br>
-                    <p><a href="https://github.com/stovin/gainztracker">Source</a></p>
+                    <p><a href="https://github.com/stevennnguyen/gainztracker">Source</a></p>
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
@@ -103,7 +103,7 @@
                       <p>Updated April 2016</p>    
                     </li>
                     <li>
-                        <h3><a href="http://github.com/stovin">Github</a></h3>
+                        <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
                       <p>Source code for all my projects</p>    
                     </li>
                     <li>
