--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <p>School Email: stevennn@uci.edu.com
               <br>Personal Email: steven.nguyen194@gmail.com
               <br><br><a href="ResumeLateApr2016.pdf">Resume</a>
-              <br><a href="http://github.com/stovin">Github</a>
+              <br><a href="http://github.com/stevennnguyen">Github</a>
               <br><a href="https://www.linkedin.com/in/stevennnguyen">LinkedIn</a>
             
             </p>
@@ -66,7 +66,7 @@
                       <p>Updated April 2016</p>    
                     </li>
                     <li>
-                        <h3><a href="http://github.com/stovin">Github</a></h3>
+                        <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
                       <p>Source code for all my projects</p>    
                     </li>
                     <li>
