--- a/projects.html
+++ b/projects.html
@@ -33,16 +33,16 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="thumbnail">
-                        <img src="images/stovin.github.io.jpeg" >
-                        <h3>stovin.github.io</h3>
-                        <p><a href="https://github.com/stovin/stovin.github.io">Source</a></p>
+                        <img src="images/stevennnguyen.github.io.jpeg" >
+                        <h3>stevennnguyen.github.io</h3>
+                        <p><a href="https://github.com/stevennnguyen/stevennnguyen.github.io">Source</a></p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="images/gainztracker.jpeg" >
                         <h3>GainzTracker</h3>
-                        <p><a href="https://github.com/stovin/gainztracker">Source</a></p>
+                        <p><a href="https://github.com/stevennnguyen/gainztracker">Source</a></p>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                       <p>Updated April 2016</p>    
                     </li>
                     <li>
-                        <h3><a href="http://github.com/stovin">Github</a></h3>
+                        <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
                       <p>Source code for all my projects</p>    
                     </li>
                     <li>
