--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <h2>Contact</h2>
             <p>School Email: stevennn@uci.edu.com
               <br>Personal Email: steven.nguyen194@gmail.com
-              <br><br><a href="ResumeLateApr2016.pdf">Resume</a>
+              <br><br><a href="ResumeLateSept2016.pdf">Resume</a>
               <br><a href="http://github.com/stevennnguyen">Github</a>
               <br><a href="https://www.linkedin.com/in/stevennnguyen">LinkedIn</a>
             
@@ -62,8 +62,8 @@
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeLateApr2016.pdf">Resume</a></h3>
-                      <p>Updated April 2016</p>    
+                        <h3><a href="ResumeLateSept2016.pdf">Resume</a></h3>
+                      <p>Updated September 2016</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
