--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeLateApr2016.pdf">Resume</a></h3>
-                      <p>Updated April 2016</p>    
+                        <h3><a href="ResumeLateSept2016.pdf">Resume</a></h3>
+                      <p>Updated September 2016</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
