--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </div>
                 <div class="col-md-8">
                     <h3>About Me</h3>
-                    <p>My name is Steven Nguyen and i was born and raised in Oxnard, California but currently doing school here in Irvine. I am a 4th year Informatics major expecting to graduate March 2017. I chose informatics for it's human centered design curriculum. What I've learned from the major is reflected in the work that I do. I love programming simple, functional apps that solve everyday problems. I am most experienced in front end development, but I don't hesitate to try new things like back end programming, mobile applications, UX design, software design, and project management.</p>
-                    <p>Into self improvement, consciousness, and all things that better your life. Reading, meditation, gym, hiking, Counter Strike: Global Offensive, music, cinematics, and cooking (dumplings) are just a few of the things I do when I'm not programming.</p>
+                    <p>My name is Steven Nguyen and I was born and raised in Oxnard, California but currently residing here in Irvine. I am a University of California, Irvine graduate with a BS in Informatics. I chose informatics for it's human centered design curriculum. What I've learned from the major is reflected in the work that I do. I love programming simple, functional apps that solve everyday problems. I am most experienced in front end development, but I don't hesitate to try new things like back end programming, mobile applications, UX design, software design, and project management.</p>
+                    <p>Into self improvement, consciousness, and all things that better your life. Reading, meditation, gym, hiking, learning languages (Japanese, Vietnamese, Chinese), music, cinematics, and cooking (dumplings) are just a few of the things I do when I'm not programming.</p>
                     <p><a href="projects.html">See some of my projects!</a></p>
                 </div>
             </div>
@@ -83,15 +83,14 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">Full time Informatics student at University of California, Irvine. Combines education, work experience, and personal drive to create useful and functional applications.
-                    <br>Graduating March 2017.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeLateSept2016.pdf">Resume</a></h3>
-                      <p>Updated September 2016</p>    
+                        <h3><a href="ResumeLateMay2017.pdf">Resume</a></h3>
+                      <p>Updated May 2017</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
