Updated navigation with Notes page

--- a/notes.html
+++ b/notes.html
@@ -19,23 +19,19 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contacts</a></li>
+          <li><a href="notes.html">Notes</a></li>
         </ul>
       </div>
       <div class="container">
-        <h1 class="text-center">Contact</h1>
-        <p class="text-center">How to reach me</p>
+        <h1 class="text-center">Notes</h1>
+        <p class="text-center">Because I can be forgetful</p>
       </div>
     </div>
 
     <div class="highlighted-projects">
         <div class="container">
-            <h2>Contact</h2>
-            <p>School Email: stevennn@uci.edu.com
-              <br>Personal Email: steven.nguyen194@gmail.com
-              <br><br><a href="notes/git.txt">Resume</a>
-              <br><a href="http://github.com/stevennnguyen">Github</a>
-              <br><a href="https://www.linkedin.com/in/stevennnguyen">LinkedIn</a>
-            
+            <p>
+              <br><a href="notes/git.txt">Git</a>
             </p>
         </div>
     </div>
