--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contacts</a></li>
+          <li><a href="notes.html">Notes</a></li>
         </ul>
       </div>
       <div class="container">
