--- a/projects.html
+++ b/projects.html
@@ -65,15 +65,14 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">Full time Informatics student at University of California, Irvine. Combines education, work experience, and personal drive to create useful and functional applications.
-                    <br>Graduating March 2017.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeLateSept2016.pdf">Resume</a></h3>
-                      <p>Updated September 2016</p>    
+                        <h3><a href="ResumeLateMay2017.pdf">Resume</a></h3>
+                      <p>Updated May 2017</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
