Create a note page for tools.

--- a/notes.html
+++ b/notes.html
@@ -30,8 +30,10 @@
 
     <div class="highlighted-projects">
         <div class="container">
+            <h2>Notes</h2>
             <p>
-              <br><a href="notes/git.txt">Git</a>
+              <a href="notes/git.txt">Git</a>
+              <a href="notes/tools.txt">Tools</a>
             </p>
         </div>
     </div>
