Explanation for notes page

--- a/notes.html
+++ b/notes.html
@@ -31,9 +31,10 @@
     <div class="highlighted-projects">
         <div class="container">
             <h2>Notes</h2>
+            <p>Note that I ever plan to be out of the game for a long period of time but in the case where I happen to, I have this page setup so I can easily transition back into whatever it is that I was doing. For example, while I was in Japan for 3 weeks I came back a little rusty and I wished I had some personal reminders on my workflow.</p>
             <p>
               <a href="notes/git.txt">Git</a>
-              <a href="notes/tools.txt">Tools</a>
+              <br><a href="notes/tools.txt">Tools</a>
             </p>
         </div>
     </div>
