display notes on notes.html

--- a/notes.html
+++ b/notes.html
@@ -35,6 +35,9 @@
             <p>
               <a href="notes/git.txt">Git</a>
               <br><a href="notes/tools.txt">Tools</a>
+              <br><a href="notes/angular2.txt">Tools</a>
+              <br><a href="notes/nodejs.txt">Tools</a>
+              <br><a href="notes/restapi.txt">Tools</a>	  
             </p>
         </div>
     </div>
