forgot to rename the note link names

--- a/notes.html
+++ b/notes.html
@@ -35,9 +35,9 @@
             <p>
               <a href="notes/git.txt">Git</a>
               <br><a href="notes/tools.txt">Tools</a>
-              <br><a href="notes/angular2.txt">Tools</a>
-              <br><a href="notes/nodejs.txt">Tools</a>
-              <br><a href="notes/restapi.txt">Tools</a>	  
+              <br><a href="notes/angular2.txt">Angular 2</a>
+              <br><a href="notes/nodejs.txt">NodeJs</a>
+              <br><a href="notes/restapi.txt">Rest Api</a>	  
             </p>
         </div>
     </div>
