--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
+                        <img src="images/languagebuddy.jpg" >
+                    </div>
+                    <h3>Language Buddy</h3>
+                    <p>Learning a language is already hard, Language Buddy just makes it a little less difficult.</p>
+                    <br>
+                    <p><a href="https://github.com/stevennnguyen/languagebuddy">Source</a> | <a href="languagebuddy.html">Project Page</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
                         <img src="images/stevennnguyen.github.io.jpeg" >
                     </div>
                     <h3>stevennnguyen.github.io</h3>
