--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,13 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="thumbnail">
+                        <img src="images/languagebuddy.jpg" >
+                        <h3>Language Buddy</h3>
+                        <p><a href="https://github.com/stevennnguyen/languagebuddy">Source</a> | <a href="languagebuddy.html">Project Page</a></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="thumbnail">
                         <img src="images/stevennnguyen.github.io.jpeg" >
                         <h3>stevennnguyen.github.io</h3>
                         <p><a href="https://github.com/stevennnguyen/stevennnguyen.github.io">Source</a></p>
