updated resume for july

--- a/projects.html
+++ b/projects.html
@@ -78,8 +78,8 @@
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeLateMay2017.pdf">Resume</a></h3>
-                      <p>Updated May 2017</p>    
+                        <h3><a href="ResumeEarlyJuly2017.pdf">Resume</a></h3>
+                      <p>Updated July 2017</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
