--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="container">
         <h1 class="text-center">Steven Nguyen</h1>
-        <p class="text-center">Web Developer</p>
+        <p class="text-center">Test Engineer</p>
       </div>
     </div>
 
@@ -99,7 +99,7 @@
                   <ul class="list-unstyled">
                     <li>
                         <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
-                      <p>Updated July 2017</p>    
+                      <p>Updated September 2017</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
