--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contacts</a></li>
-          <li><a href="notes.html">Notes</a></li>
         </ul>
       </div>
       <div class="container">
         <h1 class="text-center">Steven Nguyen</h1>
-        <p class="text-center">Test Engineer</p>
+        <p class="text-center">QA Specialist</p>
       </div>
     </div>
 
@@ -35,9 +34,9 @@
                 </div>
                 <div class="col-md-8">
                     <h3>About Me</h3>
-                    <p>My name is Steven Nguyen and I graduated from the University of California, Irvine with a Bachelor’s degree in Informatics. I am interested software test automation and quality assurance. I enjoy this line of work because it is an accumulation of the technical skills required for automation and setting up test environments, communication skills used to interact with various departments, and analyzation and critical thinking skills necessary to implement solutions that will save an immense amount of time.</p>
-                    <p>My hobbies including meditation, reading, working out, learning languages (Japanese and Vietnamese), music, movies, and cooking.</p>
-                    <p><a href="projects.html">See some of my projects!</a></p>
+                    <p>My name is Steven Nguyen and I’m a QA Specialist with 3 years of experience working in the real estate and printer management industries. I graduated from UCI in March of 2017 with a BS in Informatics.</p>
+                    <p>I like the variety that the QA field has to offer with plenty of opportunity to specialize in things such as test automation and devops. Long term, I’m looking to get into QA Automation or SDET type roles. In the mean time, I’m honing my skills at work and through personal projects (the ones on this website).</p>
+                    <p>Outside of work, my hobbies include learning foreign languages, ultimate frisbee, disc golf, reading, camping, and hiking.</p>
                 </div>
             </div>
         </div>
@@ -92,14 +91,14 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. QA Specialist</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
-                      <p>Updated September 2017</p>    
+                        <h3><a href="Steven_Nguyen_Resume.pdf">Resume</a></h3>
+                      <p>Updated September 2018</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
