--- a/projects.html
+++ b/projects.html
@@ -19,12 +19,11 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contacts</a></li>
-          <li><a href="notes.html">Notes</a></li>
         </ul>
       </div>
       <div class="container">
         <h1 class="text-center">Projects</h1>
-        <p class="text-center">Cool stuff I'm working on</p>
+        <p class="text-center">Fun stuff I'm working on</p>
       </div>
     </div>
     
@@ -72,14 +71,14 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. QA Specialist</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
-                      <p>Updated September 2017</p>    
+                        <h3><a href="Steven_Nguyen_Resume.pdf">Resume</a></h3>
+                      <p>Updated September 2018</p>    
                     </li>
                     <li>
                         <h3><a href="http://github.com/stevennnguyen">Github</a></h3>
