--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="col-md-8">
                     <h3>About Me</h3>
                     <p>My name is Steven Nguyen and I’m a QA Specialist with 4 years of experience working in the retail, real estate, and printer management industries. I graduated from UCI in March of 2017 with a BS in Informatics.</p>
-                    <p>I like the variety that the QA field has to offer with plenty of opportunity to branch out into more specialized roles. Long term, I’m looking to get into a team lead or managerial type role. In the mean time, I’m honing my skills at work and through personal projects.</p>
+                    <p>I like the variety that the QA field has to offer with plenty of opportunity to branch out into more specialized roles. Long term, I’m looking to get into a team lead or managerial position. In the mean time, I’m honing my skills at work and through personal projects.</p>
                     <p>Outside of work, my hobbies include learning foreign languages, DJing, ultimate frisbee, disc golf, reading, camping, and hiking.</p>
                 </div>
             </div>
